--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: GeoAnalytics2023
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Building a more informed Earth Science academic community
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://images2.imgbox.com/9c/fd/qfiPQpbD_o.png
 
 #
 # Flags below are optional
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: http://geoanalytical2023.github.io/TestBlog
 
 #
 # !! You don't need to change any of the configuration flags below !!
